<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/splash"
    android:background="@color/base"
    tools:context=".SplashActivity">

    <ImageView
        android:id="@+id/splash_top_decoration"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/blue_flower"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/blue_florale_ornament"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:alpha="0.9"
        />

    <FrameLayout
        android:id="@+id/splash_paimonGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/splash_top_decoration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Anneau -->
        <ImageView
            android:id="@+id/splash_paimon_ring"
            android:layout_width="280dp"
            android:layout_height="280dp"
            android:contentDescription="@string/paimon_ring"
            android:scaleType="fitCenter"
            android:alpha="0.8"
            app:srcCompat="@drawable/blue_ring_ornament" />

        <!-- Paimon -->
        <ImageView
            android:id="@+id/splash_paimon_ic"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:alpha="0.85"
            android:scaleType="fitCenter"
            android:contentDescription="@string/paimon_icon"
            app:srcCompat="@drawable/ic_paimon" />

        <!-- Titre -->
        <TextView
            android:id="@+id/splash_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold"
            android:translationY="5dp"/>
    </FrameLayout>


    <!-- Vague florale en bas -->
    <ImageView
        android:id="@+id/splash_bottomWave"
        android:layout_width="0dp"
        android:layout_height="220dp"
        android:contentDescription="@string/bottom_wave"
        android:scaleType="centerCrop"
        app:layout_constraintWidth_percent="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:srcCompat="@drawable/blue_florale_decoration"
        android:alpha="0.6"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
