<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:id="@+id/register">

    <include layout="@layout/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_new_account"
            android:textSize="16sp"
            android:layout_marginBottom="30dp"            />
        <!-- Champ Prénom -->

        <!-- Champ Nom -->
        <EditText
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/firstname"
            android:inputType="textPersonName"
            android:layout_marginBottom="30dp"
            android:autofillHints=""
            android:background="@android:drawable/editbox_background"
            android:drawableStart="@android:drawable/ic_menu_myplaces"
            android:padding="10dp" />

        <EditText
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lastname"
            android:inputType="textPersonName"
            android:autofillHints=""
            android:padding="15dp"
            android:layout_marginBottom="30dp"
            android:background="@android:drawable/editbox_background"
            />

        <!-- Champ E-mail -->
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:autofillHints=""
            android:drawableStart="@android:drawable/ic_dialog_email"
            android:padding="10dp"
            android:layout_marginBottom="30dp"
            android:background="@android:drawable/editbox_background"
            />

        <!-- Champ Mot de passe -->
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:autofillHints=""
            android:drawableStart="@android:drawable/ic_lock_lock"
            android:padding="10dp"
            android:background="@android:drawable/editbox_background"
            android:layout_marginBottom="30dp" />

        <!-- Champ Numéro de téléphone -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:minHeight="48dp"
            android:layout_marginBottom="30dp"            >

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:drawableStart="@android:drawable/stat_sys_phone_call"
                android:entries="@array/country_codes"
                />

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/mobile"
                android:inputType="phone"
                android:autofillHints=""
                android:background="@android:drawable/editbox_background"
                android:padding="10dp"
                />
        </LinearLayout>

        <!-- Bouton de validation -->
        <Button
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@android:color/white"
            android:background="@drawable/button_rect"
            android:layout_marginTop="16dp"
            />
    </LinearLayout>

</LinearLayout>
